Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypePriPriBooleanRetIntObj.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, Integer> yoda
        Integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
