Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriTextRettextFail.quorum
class Main
    action Main
        text one = "green"
        text two = "green"
        Yoda<text, text, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
